--- a/webapp/home/labs/docs/section_2.yml
+++ b/webapp/home/labs/docs/section_2.yml
@@ -3,7 +3,7 @@ title: Example section  with subsections
 tabs:
   - id: tools
     title: Tools
-    heading_html: |
+    heading_md: |
       The tools in this section have been divided into subsections to make it
       easier for users to find the tools they need. This must replace the
       entire value of the <code>content</code> key i.e. you can't mix
@@ -19,8 +19,8 @@ tabs:
           content:
 
             # Accordion item schema:
-            #   title_html: <str>  # inline HTML accepted e.g. <i> <b> <code>
-            #   description_html: <str>
+            #   title_md: <str>  # inline HTML accepted e.g. <i> <b> <code>
+            #   description_md: <str>
             #   inputs: <optional>
             #     - datatypes:  # tool input 1 - two accepted datatypes
             #       - <str>
@@ -30,15 +30,15 @@ tabs:
             #       - <str>
             #       label: <str optional>
             #   button_link: <str optional>
-            #   button_html: <str optional>
+            #   button_md: <str optional>
             #   button_tip: <str optional>
             #   view_link: <str optional>
-            #   view_html: <str optional>
+            #   view_md: <str optional>
             #   view_tip: <str optional>
 
-          - title_html: <code>Hifiasm</code>- assembly with PacBio HiFi data
+          - title_md: <code>Hifiasm</code>- assembly with PacBio HiFi data
             button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fhifiasm%2Fhifiasm"
-            description_html: <p>A haplotype-resolved assembler for PacBio HiFi reads.</p>
+            description_md: <p>A haplotype-resolved assembler for PacBio HiFi reads.</p>
             inputs:
               - label: PacBio reads
                 datatypes:
@@ -48,9 +48,9 @@ tabs:
         - id: subsection_2
           title: Another subsection
           content:
-            - title_html: <code>Flye</code>- assembly with PacBio or Nanopore data
+            - title_md: <code>Flye</code>- assembly with PacBio or Nanopore data
               button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fflye%2Fflye"
-              description_html: >
+              description_md: >
                 <p>
                   <em>de novo</em>
                   assembly of single-molecule sequencing reads, designed for a wide range of datasets,
@@ -58,12 +58,13 @@ tabs:
                 </p>
               inputs:
               - label: Single-molecule sequencing reads
+                datatypes:
                   - fasta
                   - fastq
 
   - id: workflows
     title: Workflows
-    heading_html: >
+    heading_md: >
       A workflow is a series of Galaxy tools that have been linked together
       to perform a specific analysis. You can use and customize the example workflows
       below.
@@ -75,7 +76,7 @@ tabs:
         - id: pacbio
           title: Assembly with PacBio HiFi data
           content:
-            - description_html: >
+            - description_md: >
                 <p>
                   This
                   <a href="https://australianbiocommons.github.io/how-to-guides/genome_assembly/hifi_assembly" target="_blank">
@@ -84,10 +85,10 @@ tabs:
                   will describe the steps required to assemble your genome on the Galaxy Australia platform,
                   using multiple workflows.
                 </p>
-              title_html: About these workflows
+              title_md: About these workflows
             - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=220"
               button_tip: Import to Galaxy Australia
-              description_html: >
+              description_md: >
                 <p>
                   Convert a BAM file to FASTQ format to perform QC analysis (required if your data is in BAM format).
                 </p>
@@ -95,13 +96,13 @@ tabs:
                 - label: PacBio<em>subreads.bam</em>
                   datatypes:
                     - bam
-              title_html: BAM to FASTQ + QC v1.0
+              title_md: BAM to FASTQ + QC v1.0
               view_link: https://workflowhub.eu/workflows/220
               view_tip: View in WorkflowHub
         - id: nanopore
           title: Assembly with Nanopore data and polishing with Illumina data
           content:
-            - description_html: >
+            - description_md: >
                 <p>
                   This
                   <a href="https://training.galaxyproject.org/training-material/topics/assembly/tutorials/largegenome/tutorial.html" target="_blank">
@@ -109,10 +110,10 @@ tabs:
                   </a>
                   describes the steps required to assemble a genome on Galaxy with Nanopore and Illumina data
                 </p>
-              title_html: About these workflows
+              title_md: About these workflows
             - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=225"
               button_tip: Import to Galaxy Australia
-              description_html: >
+              description_md: >
                 <p>
                   Assemble Nanopore long reads. This workflow can be run alone or as part of a combined workflow for large genome assembly.
                 </p>
@@ -120,16 +121,16 @@ tabs:
                 - label: Long reads (may be raw, filtered and/or corrected)
                   datatypes:
                   - fastqsanger
-              title_html: Flye assembly with Nanopore data
+              title_md: Flye assembly with Nanopore data
               view_link: https://workflowhub.eu/workflows/225
               view_tip: View in WorkflowHub
 
   - id: help
     title: Help
     content:
-      - button_html: Request support
+      - button_md: Request support
         button_link: /request
-        description_html: >
+        description_md: >
           <p>
             Yes. Galaxy Australia has assembly tools for small prokaryote genomes as well as larger eukaryote genomes.
             We are continually adding new tools and optimising them for large genome assemblies
@@ -144,11 +145,11 @@ tabs:
             <li>there is a tool you wish to request</li>
             <li>a tool appears to be broken or running slowly</li>
           </ul>
-        title_html: Can I use Galaxy Australia to assemble a large genome?
-      - description_html: >
+        title_md: Can I use Galaxy Australia to assemble a large genome?
+      - description_md: >
           <ul>
             <li>See the tutorials in this Help section. They cover different approaches to genome assembly</li>
             <li>Read the methods in scientific papers about genome assembly, particularly those about genomes with similar characteristics to those in your project</li>
             <li>See the Workflows section for examples of different approaches to genome assembly - these cover different sequencing data types, and a variety of tools.</li>
           </ul>
-        title_html: How can I learn about genome assembly?
+        title_md: How can I learn about genome assembly?
