--- a/webapp/home/labs/docs/main.yml
+++ b/webapp/home/labs/docs/main.yml
@@ -12,9 +12,9 @@ root_domain: galaxy-antarctica.org
 # These files need to be accessible on the internet, relative to the content_root URL!
 # -----------------------------------------------------------------------------
 # Custom content relative to this file URL
-intro_html: templates/intro.html
+intro_md: templates/intro.md
 header_logo: static/flask.svg
-footer_html: templates/footer.html
+footer_md: templates/footer.html
 custom_css: static/custom.css
 
 # Data to be rendered into sections/tabs/accordion elements:
