--- a/webapp/home/labs/simple/main.yml
+++ b/webapp/home/labs/simple/main.yml
@@ -2,20 +2,21 @@
 
 # You can test with: /lab/export?content_root=https://raw.githubusercontent.com/usegalaxy-au/galaxy-media-site/dev/webapp/home/labs/docs/main.yml
 
-site_name: Antarctica
-lab_name: Galaxy Lab Pages
-nationality: Antarctican
-galaxy_base_url: https://galaxy-antarctica.org
-subdomain: antarctica
-root_domain: galaxy-antarctica.org
+site_name: Archaeology
+lab_name: Archaeology Lab
+nationality: Egyptian
+galaxy_base_url: https://galaxy-archaeology.org
+subdomain: archaeology
+root_domain: galaxy-archaeology.org
 
 # These files need to be accessible on the internet, relative to the content_root URL!
 # -----------------------------------------------------------------------------
 # Custom content relative to this file URL
-intro_md: templates/intro.html
-header_logo: static/flask.svg
-footer_md: templates/footer.html
+header_logo: static/pillar.svg
 custom_css: static/custom.css
+intro_md: templates/intro.md
+footer_md: templates/footer.md
+conclusion_md: templates/conclusion.md
 
 # Data to be rendered into sections/tabs/accordion elements:
 sections:
