--- a/webapp/home/labs/simple/section_1.yml
+++ b/webapp/home/labs/simple/section_1.yml
@@ -26,10 +26,10 @@ tabs:
 
       - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=upload1"
         title_md: Import data to Galaxy
-        description_md: >
-          Standard upload of data to Galaxy, from your computer or from the web.
+        description_md: Standard upload of data to Galaxy, from your computer or
+          from the web.
       - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fdevteam%2Ffastqc%2Ffastqc"
-        title_md: FastQC - sequence quality reports
+        title_md: <code>FastQC</code> - sequence quality reports
         description_md: >
           Before using your sequencing data, it's important to ensure that
           the data quality is sufficient for your analysis.
@@ -47,7 +47,9 @@ tabs:
       A workflow is a series of Galaxy tools that have been linked together
       to perform a specific analysis. You can use and customize the example workflows
       below.
-      [Learn more](https://galaxyproject.org/learn/advanced-workflow/).
+      <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">
+        Learn more
+      </a>.
     content:
       - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=222"
         button_tip: Import to Galaxy AU
@@ -55,22 +57,24 @@ tabs:
         view_link: https://workflowhub.eu/workflows/222
         view_tip: View in WorkflowHub
         description_md: |
-          Report statistics from sequencing reads.
-          <br><br>
-          Tools:
-
-          - `nanoplot`
-          - `fastqc`
-          - `multiqc`
+          <p>
+            Report statistics from sequencing reads.
+            <br><br>
+            Tools:
+            <code>nanoplot</code>
+            <code>fastqc</code>
+            <code>multiqc</code>
+          </p>
       - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=223"
         button_tip: Import to Galaxy AU
         description_md: |
-          Estimates genome size and heterozygosity based on counts of kmers.
-          <br><br>
-          Tools:
-
-          - `meryl`
-          - `genomescope`
+          <p>
+            Estimates genome size and heterozygosity based on counts of kmers.
+            <br><br>
+            Tools:
+            <code>meryl</code>
+            <code>genomescope</code>
+          </p>
         title_md: Kmer counting to estimate genome size
         view_link: https://workflowhub.eu/workflows/223
         view_tip: View in WorkflowHub
@@ -81,10 +85,16 @@ tabs:
       - button_md: More info
         button_link: https://training.galaxyproject.org/training-material/topics/galaxy-interface/
         description_md: |
-          You can upload your data to Galaxy using the Upload tool from anywhere in Galaxy.
-          Just look for the "Upload data" button at the top of the tool panel.
+          <p>
+            You can upload your data to Galaxy using the Upload tool from anywhere in Galaxy.
+            Just look for the "Upload data" button at the top of the tool panel.
+          </p>
         title_md: How can I import my genomics data?
       - description_md: |
-          We recommend subsampling large data sets to test tools and workflows.
-          A useful tool is `seqtk_seq`, setting the parameter at "Sample fraction of sequences".
+          <p>
+            We recommend subsampling large data sets to test tools and workflows.
+            A useful tool is
+            <code>seqtk_seq</code>,
+            setting the parameter at "Sample fraction of sequences"
+          </p>
         title_md: How can I subsample my data?
