Labs auto-fetch and render CONTRIBUTORS file

--- a/.env.sample
+++ b/.env.sample
@@ -41,3 +41,6 @@ GALAXY_URL=
 # Admin API access (optional)
 GALAXY_API_KEY=
 #MOCK_GALAXY_INTERACTIONS=true  # Uncomment to mock Galaxy interactions
+
+# For making API requests to github (reduces rate limit from 60/day to 5000/day)
+GITHUB_API_TOKEN=
