Update github workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,39 @@
-name: Deploy to production
+name: Deploy to web server
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Django tests"]
+    types:
+      - completed
 
 jobs:
-  run_pull:
-    name: run server update
+  deploy_dev:
+    name: Deploy to dev server
     runs-on: ubuntu-latest
     environment: deployment
+    if: >
+      ${{ github.event.workflow_run.conclusion == 'success'
+          && github.event.workflow_run.head_branch == 'dev' }}
+    steps:
+    - name: install ssh keys
+      # check this thread to understand why its needed:
+      # https://stackoverflow.com/a/70447517
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY_DEV }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST_DEV }} > ~/.ssh/known_hosts
+    - name: connect and pull
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_DEV }} "./update.sh && exit"
+    - name: cleanup
+      run: rm -rf ~/.ssh
 
+  deploy_prod:
+    name: Deploy to prod server
+    runs-on: ubuntu-latest
+    environment: deployment
+    if: >
+      ${{ github.event.workflow_run.conclusion == 'success'
+          && github.event.workflow_run.head_branch == 'main' }}
     steps:
     - name: install ssh keys
       # check this thread to understand why its needed:
