--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -2,7 +2,7 @@ name: Django tests
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "main", "dev" ]
   pull_request:
     branches: [ "main", "dev" ]
 
