Fix github workflows

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -6,11 +6,11 @@ on:
     types:
       - completed
     branches:
-      - main
+      - dev
 
 jobs:
-  deploy_prod:
-    name: Deploy to prod server
+  deploy_dev:
+    name: Deploy to dev server
     runs-on: ubuntu-latest
     environment: deployment
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -20,9 +20,9 @@ jobs:
       # https://stackoverflow.com/a/70447517
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+        echo "${{ secrets.SSH_PRIVATE_KEY_DEV }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST_DEV }} > ~/.ssh/known_hosts
     - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "./update.sh && exit"
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_DEV }} "./update.sh && exit"
     - name: cleanup
       run: rm -rf ~/.ssh
