--- a/.github/workflows/gitpod-pull-request.yml
+++ b/.github/workflows/gitpod-pull-request.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Comment with Gitpod link
+        env:
+          DJANGO_SETTINGS_MODULE: webapp.settings.dev
         run: |
           GITPOD_URL="https://gitpod.io/#${{ github.event.pull_request.head.ref }}@github.com/${{ github.repository }}"
           echo "View the preview: [Gitpod]($GITPOD_URL)" > gitpod_comment.md
