--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,4 +5,20 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: pip install -r requirements.txt
+  - name: install requirements
+    init: pip install -r requirements.txt
+  - name: set .env
+    init: |
+      echo "DJANGO_SECRET_KEY=secret
+      DB_NAME=webapp
+      DB_USER=webapp
+      DB_PASSWORD=secret
+      MAIL_FROM_ADDRESS=noreply@mysite.com
+      MAIL_TO_ADDRESS=helpdesk@mysite.com
+      EMAIL_SUBJECT_PREFIX='GMS: '" > .env
+  - name: Start Django Server
+    env:
+      DJANGO_SETTINGS_MODULE: webapp.settings.dev
+    command: |
+      python manage.py migrate
+      python manage.py runserver 0.0.0.0:8000
