--- a/.github/workflows/gitpod-pull-request.yml
+++ b/.github/workflows/gitpod-pull-request.yml
@@ -8,6 +8,9 @@ jobs:
   gitpod-preview:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the repository
+        uses: actions/checkout@v3
+
       - name: Comment with Gitpod link
         env:
           GH_TOKEN: ${{ github.token }}
