--- a/.github/workflows/gitpod-pull-request.yml
+++ b/.github/workflows/gitpod-pull-request.yml
@@ -15,6 +15,6 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          GITPOD_URL="https://gitpod.io/#${{ github.event.pull_request.head.ref }}@github.com/${{ github.repository }}"
+          GITPOD_URL="https://gitpod.io/#https://github.com/${{ github.repository }}/tree/${{ github.event.pull_request.head.ref }}"
           echo "View the preview: [Gitpod]($GITPOD_URL)" > gitpod_comment.md
           gh pr comment ${{ github.event.pull_request.number }} --body "$(cat gitpod_comment.md)"
