Replace web_root with django_root and drop soft-linked web root

--- a/deploy/ansible/group_vars/webservers.yml
+++ b/deploy/ansible/group_vars/webservers.yml
@@ -44,7 +44,7 @@ project_root: /srv/sites/galaxy-media-site
 server_root: /srv/config
 
 # App will be served from here
-web_root: "{{ project_root }}/webapp"
+django_root: "{{ project_root }}/webapp"
 
 # Virtual environment will be created here
 venv_root: "{{ project_root }}/venv"
