--- a/deploy/ansible/roles/galaxy_media_site/defaults/main.yml
+++ b/deploy/ansible/roles/galaxy_media_site/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 project_root: /home/ubuntu/galaxy-content-site
 server_root: /home/ubuntu/server
-web_root: /srv/webapp
+django_root: /srv/webapp
 venv_root: "{{ project_root }}/venv"
 
 webapp:
