--- a/deploy/ansible/roles/galaxy_media_site/tasks/main.yml
+++ b/deploy/ansible/roles/galaxy_media_site/tasks/main.yml
@@ -41,12 +41,12 @@
 
 - name: create webapp media directory
   file:
-    path: "{{ web_root }}/webapp/media"
+    path: "{{ django_root }}/webapp/media"
     state: directory
 
 - name: create webapp logs directory
   file:
-    path: "{{ web_root }}/webapp/logs"
+    path: "{{ django_root }}/webapp/logs"
     state: directory
 
 - name: template webserver configuration
@@ -82,7 +82,7 @@
 
 - name: Ensure webapp superuser login
   shell: |
-    cd {{ web_root }} && \
+    cd {{ django_root }} && \
     export DJANGO_SUPERUSER_PASSWORD={{ admin_user.password }} && \
     {{ venv_root }}/bin/python manage.py createsuperuser --noinput \
       --email {{ admin_user.email }} \
@@ -100,10 +100,10 @@
     group: ubuntu
 
 - name: update media file ownership
-  file: dest={{ web_root }}/webapp/media owner=www-data group=www-data mode=u=rwX,g=rwX,o=rwX recurse=yes
+  file: dest={{ django_root }}/webapp/media owner=www-data group=www-data mode=u=rwX,g=rwX,o=rwX recurse=yes
 
 - name: update log file ownership
-  file: dest={{ web_root }}/webapp/logs owner=www-data group=www-data mode=u=rwX,g=rwX,o=rwX recurse=yes
+  file: dest={{ django_root }}/webapp/logs owner=www-data group=www-data mode=u=rwX,g=rwX,o=rwX recurse=yes
 
 - name: make update.sh executable
   file: dest=/home/ubuntu/update.sh mode=a+x
@@ -111,7 +111,7 @@
 - name: check whether news scraper in GMS version
   ansible.builtin.shell: "{{ venv_root }}/bin/python manage.py scrape_news --help"
   args:
-    chdir: "{{ web_root }}"
+    chdir: "{{ django_root }}"
   register: check_scraper
 
 - name: add cron job to scrape news feed
@@ -120,5 +120,5 @@
     user: ubuntu
     hour: 9
     minute: 0
-    job: "cd {{ web_root }} && {{ venv_root }}/bin/python manage.py scrape_news"
+    job: "cd {{ django_root }} && {{ venv_root }}/bin/python manage.py scrape_news"
   when: check_scraper.rc == 0
