Ansible - rename 'webapp' to 'gms'

--- a/.env.sample
+++ b/.env.sample
@@ -7,8 +7,8 @@ HOSTNAME=localhost:8000
 CSRF_COOKIE_DOMAIN=.mysite.com
 
 # Postgres database credentials
-DB_NAME=webapp
-DB_USER=webapp
+DB_NAME=gms
+DB_USER=gms
 DB_PASSWORD="secret"
 
 # Credentials for your SMTP mail server
