--- a/deploy/ansible/group_vars/webservers.yml
+++ b/deploy/ansible/group_vars/webservers.yml
@@ -49,7 +49,7 @@ django_root: "{{ project_root }}/webapp"
 # Virtual environment will be created here
 venv_root: "{{ project_root }}/venv"
 
-# Admin user login for the admin portal
+# Login for django admin portal
 admin_user:
   first_name: admin
   last_name: admin
