Set SERVER_EMAIL for error email address

--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,9 @@ MAIL_FROM_ADDRESS=noreply@mysite.com
 MAIL_TO_ADDRESS=helpdesk@mysite.com
 MAIL_USE_TLS=true
 
+# Optional: Send error emails to a different address than MAIL_FROM_ADDRESS
+SERVER_EMAIL=support@mysite.com
+
 MAIL_SMTP_PORT=25
 MAIL_HOSTNAME=mail.mysite.com
 MAIL_SMTP_USERNAME=admin
