Update maintenance site nginx

--- a/deploy/maintenance-site/nginx-dev.conf
+++ b/deploy/maintenance-site/nginx-dev.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name  site.usegalaxy.org.au site-maintenance.usegalaxy.org.au;
+    server_name  dev-site.gvl.org.au site-maintenance.gvl.org.au;
     access_log   /var/log/nginx/gms-maintenance.access.log;
     error_log    /var/log/nginx/gms-maintenance.error.log;
 
@@ -21,8 +21,8 @@ server {
     }
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/site.usegalaxy.org.au/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/site.usegalaxy.org.au/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/dev-site.gvl.org.au/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/dev-site.gvl.org.au/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -30,12 +30,12 @@ server {
 
 server {
 
-    if ($host = site.usegalaxy.org.au) {
+    if ($host = dev-site.gvl.org.au) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
     listen 80;
-    server_name site.usegalaxy.org.au;
+    server_name dev-site.gvl.org.au;
     return 404; # managed by Certbot
 
 }
