Deploy workflow try fix ansible error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Ansible
         run: |
           python -m pip install --upgrade pip
-          pip install ansible
+          pip install ansible packaging
 
       - name: Install ssh keys
         # For reference: https://stackoverflow.com/a/70447517
