--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -7,6 +7,7 @@ on:
       - completed
     branches:
       - dev
+  workflow_dispatch: {}  # For local testing with act
 
 jobs:
   deploy:
@@ -17,10 +18,8 @@ jobs:
       cancel-in-progress: true
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.workflow_run.head_branch }}
+      - name: Clone Infrastructure Repository
+        run: git clone https://github.com/usegalaxy-au/infrastructure.git infrastructure
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -30,29 +29,28 @@ jobs:
       - name: Install Ansible
         run: |
           python -m pip install --upgrade pip
-          pip install ansible
+          pip install ansible packaging
 
       - name: Install ssh keys
         # For reference: https://stackoverflow.com/a/70447517
         run: |
           install -m 600 -D /dev/null ~/.ssh/galaxy
-          echo "${{ secrets.SSH_PRIVATE_KEY_DEV }}" > ~/.ssh/galaxy
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/galaxy
           echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
 
       - name: Add VAULT password
         run: |
-          echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > deploy/ansible/.vault.pass
+          echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > infrastructure/.vault_pass.txt
 
       - name: Install ansible roles
         run: |
-          cd deploy/ansible
+          cd infrastructure
           ansible-galaxy install -p roles -r requirements.yml
 
       - name: Run Ansible Playbook
         run: |
-          cd deploy/ansible
-          ansible-playbook -i hosts dev.yml --tags update
+          cd infrastructure
+          ansible-playbook -i hosts --tags update --key-file ~/.ssh/galaxy galaxy-media_dev_playbook.yml
         env:
           ANSIBLE_HOST_KEY_CHECKING: 'False'
           ANSIBLE_REMOTE_USER: ${{ secrets.SSH_USER }}
-          ANSIBLE_PRIVATE_KEY_FILE: ~/.ssh/galaxy
