--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.workflow_run.head_branch }}
+          repo: https://github.com/usegalaxy-au/infrastructure.git
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -41,17 +41,19 @@ jobs:
 
       - name: Add VAULT password
         run: |
-          echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > deploy/ansible/.vault.pass
+          echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > .vault_pass.txt
 
       - name: Install ansible roles
         run: |
-          cd deploy/ansible
           ansible-galaxy install -p roles -r requirements.yml
 
       - name: Run Ansible Playbook
-        run: |
-          cd deploy/ansible
-          ansible-playbook -i hosts prod.yml --tags update
+        run: >
+          ansible-playbook
+            -i hosts
+            --tags update
+            --key-file ~/.ssh/galaxy
+            galaxy-media_playbook.yml
         env:
           ANSIBLE_HOST_KEY_CHECKING: 'False'
           ANSIBLE_REMOTE_USER: ${{ secrets.SSH_USER }}
